package com.devalr.framework

const val FRAMEWORK_ADD_CARD = "framework_add_card"
const val FRAMEWORK_TOP_BUTTON_BACK = "framework_top_button_back"
const val FRAMEWORK_TOP_BUTTON_SETTINGS = "framework_top_button_settings"

const val HOME_NEARLY_COMPLETED_PROJECTS = "home_nearly_completed_projects"
const val HOME_RECENT_MINIS = "home_recent_minis"
const val FRAMEWORK_BOTTOM_SHEET_POSITIVE_BUTTON = "bottom_sheet_positive"

const val CREATE_MINIATURE_SUBMIT_BUTTON = "create_miniature_submit_button"

const val CREATE_PROJECT_SUBMIT_BUTTON = "create_projects_submit_button"
const val DETAIL_PROJECT_CREATE_MINI_FAB = "detail_project_create_mini_fab"
const val DETAIL_MINIATURE_MILESTONE = "detail_miniature_milestone_"
const val DETAIL_MINIATURE_UPDATE_BUTTON = "detail_miniature_update_button"
const val START_PAINTING_BUTTON = "start_painting_button"
const val PAINTING_BUTTON = "finish_painting_button"
const val SETTINGS_TITLE = "settings_title"





