<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Errors -->
    <string name="error_add_project_empty_name">Project name can’t be empty.</string>
    <string name="error_add_project_bad_id">Something went wrong. Please try again.</string>
    <string name="error_add_project_add_database">Couldn’t create the project. Please try again.</string>
    <string name="error_add_project_edit_database">Couldn’t save the changes. Please try again.</string>
    <string name="error_add_project_import_images">Couldn’t import the image. Please try again.</string>

    <!-- Buttons -->
    <string name="button_add_project">Create project</string>
    <string name="button_edit_project">Save changes</string>

    <!-- Labels -->
    <string name="label_project_name">Project name</string>
    <string name="label_project_description">Project description</string>
</resources>