<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Errors -->
    <string name="error_add_miniature_empty_name">Miniature name can’t be empty.</string>
    <string name="error_add_miniature_bad_id">Something went wrong. Please try again.</string>
    <string name="error_add_miniature_add_database">Couldn’t create the miniature. Please try again.</string>
    <string name="error_add_miniature_edit_database">Couldn’t save the changes. Please try again.</string>
    <string name="error_add_miniature_update_progress">Couldn’t update the progress. Please try again later.</string>
    <string name="error_add_miniature_import_images">Couldn’t import the image. Please try again.</string>

    <!-- Buttons -->
    <string name="button_add_miniature">Create miniature</string>
    <string name="button_edit_miniature">Save changes</string>

    <!-- Labels -->
    <string name="label_miniature_name">Miniature name</string>
    <string name="label_miniature_description">Miniature description</string>
</resources>