...
        horizontalArrangement = Arrangement.SpaceBetween
    ) {
        Row(verticalAlignment = Alignment.CenterVertically) {
            Icon(
                modifier = Modifier.size(20.dp),
                painter = iconPainter,
                contentDescription = "Start Painting",
                tint = MaterialTheme.colorScheme.onSurface
            )
            Spacer(modifier = Modifier.width(15.dp))
            GHText(text = label, type = TextType.LabelMBold)
        }
        currentValue?.let {
...
